--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -89,6 +89,8 @@ layout: default
                   {% include resume/work.liquid %}
                 {% when 'volunteer' %}
                   {% include resume/volunteer.liquid %}
+                {% when 'mentorship' %}
+                  {% include resume/mentorship.liquid %}
                 {% when 'research grants' %}
                   {% include resume/grants.liquid %}
                 {% when 'projects' %}
