--- a/_includes/resume/mentorship.liquid
+++ b/_includes/resume/mentorship.liquid
@@ -4,33 +4,32 @@
     <li class="list-group-item">
       <div class="row">
         <div class="col-xs-2 cl-sm-2 col-md-2 text-center cv-date-cell">
-          {% if content.startDate %}
+          {% assign startDateVal = content.startDate | strip | downcase %}
+          {% if content.startDate and startDateVal != '' and startDateVal != 'placeholder' %}
             {% assign startDate = content.startDate | split: '-' | slice: 0, 2 | join: '.' %}
             {% assign endDate = content.endDate | split: '-' | slice: 0, 2 | join: '.' | default: 'Present' %}
             {% assign date = startDate | append: ' - ' %}
             {% assign date = date | append: endDate %}
-          {% else %}
-            {% assign date = '' %}
+            <span class="badge font-weight-bold danger-color-dark text-uppercase align-middle"> {{ date }} </span>
           {% endif %}
-          <span class="badge font-weight-bold danger-color-dark text-uppercase align-middle"> {{ date }} </span>
         </div>
         <div class="col-xs-10 cl-sm-10 col-md-10 mt-2 mt-md-0 cv-content-cell">
-          <h6 class="title font-weight-bold ml-1 ml-md-4">
-            {% assign url = content.url | strip | downcase %}
-            {% if url != '' and url != 'placeholder' %}
-              <a href="{{ content.url }}">{{ content.organization }}</a>
-            {% else %}
-              <span>{{ content.organization }}</span>
-            {% endif %}
-          </h6>
-          <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem; font-style: italic">{{ content.summary }}</h6>
-          <ul class="items">
-            {% for item in content.highlights %}
-              <li>
-                <span class="item">{{ item }}</span>
-              </li>
-            {% endfor %}
-          </ul>
+          <h6 class="title font-weight-bold ml-1 ml-md-4">{{ content.student }}</h6>
+          {% if content['student status'] %}
+            <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem; font-style: italic">{{ content['student status'] }}</h6>
+          {% endif %}
+          {% if content.summary %}
+            <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem">{{ content.summary }}</h6>
+          {% endif %}
+          {% if content.highlights and content.highlights.size > 0 %}
+            <ul class="items">
+              {% for item in content.highlights %}
+                <li>
+                  <span class="item">{{ item }}</span>
+                </li>
+              {% endfor %}
+            </ul>
+          {% endif %}
         </div>
       </div>
     </li>
